src/test/ui/issues/issue-86756.stderr
error[E0403]: the name `T` is already used for a generic parameter in this item's generic parameters
  --> $DIR/issue-86756.rs:1:14
   |
LL | trait Foo<T, T = T> {}
   |           -  ^ already used
   |           |
   |           first use of `T`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/issue-86756.rs:5:10
   |
LL | fn eq<A, B>() {
   |           - help: you might be missing a type parameter: `, dyn`
LL |     eq::<dyn, Foo>
   |          ^^^ not found in this scope

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-86756.rs:5:15
   |
LL |     eq::<dyn, Foo>
   |               ^^^
   |
   = note: `#[warn(bare_trait_objects)]` on by default
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: use `dyn`
   |
LL -     eq::<dyn, Foo>
LL +     eq::<dyn, dyn Foo>
   | 

error[E0107]: missing generics for trait `Foo`
  --> $DIR/issue-86756.rs:5:15
   |
LL |     eq::<dyn, Foo>
   |               ^^^ expected at least 1 generic argument
   |
note: trait defined here, with at least 1 generic parameter: `T`
  --> $DIR/issue-86756.rs:1:7
   |
LL | trait Foo<T, T = T> {}
   |       ^^^ -
help: add missing generic argument
   |
LL |     eq::<dyn, Foo<T>>
   |               ~~~~~~

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0107, E0403, E0412.
For more information about an error, try `rustc --explain E0107`.
